--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-concurrent": "~0.4.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-imagemin": "~0.4.1"
+    "grunt-contrib-imagemin": "~0.4.1",
+    "grunt-contrib-connect": "~0.9.0"
   }
 }
