--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "Project-Template-Four",
+  "name": Lemonly Project Boilerplate",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-csslint": "~0.2.0",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-jshint": "~0.7.2",
-    "grunt-contrib-sass": "~0.6.0",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-concurrent": "~0.4.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-imagemin": "~0.4.1",
-    "grunt-contrib-connect": "~0.9.0"
+    "grunt": "~0.4.5",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.11.0",
+    "grunt-contrib-sass": "~0.8.1",
+    "grunt-contrib-uglify": "~0.7.0",
+    "grunt-concurrent": "~1.0.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-connect": "~0.9.0",
   }
 }
