--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": Lemonly Project Boilerplate",
-  "version": "0.1.0",
+  "name": "Lemonly-Project-Boilerplate",
+  "version": "0.2.0",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-concat": "~0.5.0",
@@ -10,5 +10,9 @@
     "grunt-concurrent": "~1.0.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-connect": "~0.9.0",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-copy": "~0.7.0",
+    "grunt-cache-bust": "~0.4.5",
+    "grunt-text-replace": "~0.4.0"
   }
 }
