--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "~0.7.0",
     "grunt-cache-bust": "~0.4.5",
-    "grunt-text-replace": "~0.4.0"
+    "grunt-text-replace": "~0.4.0",
+    "grunt-contrib-compress": "~0.13.0"
   }
 }
