--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "~0.7.0",
     "grunt-cache-bust": "~0.4.5",
-    "grunt-contrib-compress": "~0.13.0"
+    "grunt-contrib-compress": "~0.13.0",
+    "grunt-babel": "~4.0.0"
   }
 }
