--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Lemonly-Project-Boilerplate",
-  "version": "1.0.0",
+  "version": "1.1.0b",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-cssmin": "~0.11.0",
