--- a/package.json
+++ b/package.json
@@ -13,6 +13,20 @@
     "grunt-contrib-copy": "~0.7.0",
     "grunt-cache-bust": "~0.4.5",
     "grunt-contrib-compress": "~0.13.0",
-    "grunt-babel": "~4.0.0"
+    "grunt-babel": "~4.0.0",
+    "gulp": "~3.9.0",
+    "gulp-connect": "~2.2.0",
+    "gulp-sass": "~2.0.4",
+    "gulp-open": "~1.0.0",
+    "gulp-babel": "~5.2.1",
+    "gulp-sourcemaps": "~1.5.2",
+    "gulp-minify-css": "~1.2.1",
+    "gulp-clean": "~0.3.1",
+    "gulp-ignore": "~1.2.1",
+    "gulp-copy": "0.0.2",
+    "gulp-rename": "~1.2.2",
+    "gulp-uglify": "~1.4.1",
+    "gulp-html-replace": "~1.5.4",
+    "gulp-zip": "~3.0.2"
   }
 }
