--- a/package.json
+++ b/package.json
@@ -1,19 +1,7 @@
 {
   "name": "Lemonly-Project-Boilerplate",
-  "version": "1.1.0b",
+  "version": "1.2.0",
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-cssmin": "~0.11.0",
-    "grunt-contrib-sass": "~0.8.1",
-    "grunt-contrib-uglify": "~0.7.0",
-    "grunt-concurrent": "~1.0.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-connect": "~0.9.0",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-copy": "~0.7.0",
-    "grunt-cache-bust": "~0.4.5",
-    "grunt-contrib-compress": "~0.13.0",
-    "grunt-babel": "~4.0.0",
     "gulp": "~3.9.0",
     "gulp-connect": "~2.2.0",
     "gulp-sass": "~2.0.4",
