--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "1.2.0",
   "devDependencies": {
     "gulp": "~3.9.0",
-    "gulp-connect": "~2.2.0",
-    "gulp-sass": "~2.0.4",
-    "gulp-open": "~1.0.0",
+    "gulp-autoprefixer": "~3.0.2",
     "gulp-babel": "~5.2.1",
-    "gulp-sourcemaps": "~1.5.2",
-    "gulp-minify-css": "~1.2.1",
     "gulp-clean": "~0.3.1",
-    "gulp-ignore": "~1.2.1",
+    "gulp-connect": "~2.2.0",
     "gulp-copy": "0.0.2",
-    "gulp-rename": "~1.2.2",
-    "gulp-uglify": "~1.4.1",
+    "gulp-eslint": "~1.0.0",
     "gulp-html-replace": "~1.5.4",
+    "gulp-ignore": "~1.2.1",
+    "gulp-minify-css": "~1.2.1",
+    "gulp-open": "~1.0.0",
+    "gulp-rename": "~1.2.2",
+    "gulp-sass": "^2.0.4",
+    "gulp-scss-lint": "~0.3.4",
+    "gulp-sourcemaps": "~1.5.2",
+    "gulp-uglify": "~1.4.1",
     "gulp-zip": "~3.0.2"
   }
 }
